# t4c-client-linux

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SETUP.md
client/: T4C Client.sln
client/DirectX8Lib/Lib/: STRMBASE.lib
client/DirectX8Lib/include/: ctlutil.h
client/Sound Engine/: Sound Engine.vcproj  Sound Engine.vcxproj  Sound Engine.vcxproj.filters  T3 Sound Buffer.cpp  T3 Sound Manager.cpp  T3Sound.h  newstring.cpp  newstring.h
client/Sound Engine/Debug/: BuildLog.htm
client/Sound Engine/Release/: BuildLog.htm
client/T4C Client/: 2.cpp  App.cpp  App.h  Apparence.h  Audio.cpp  Audio.h  Autolock.cpp  BasicSprite.h  Bitmap.h  BlowFish.cpp  BlowFish.h  CDAduio.cpp  CombatCursor.h  Comm.cpp  Comm.h  Cs.h  DirectXInput.CPP  DirectXInput.H  Disp.cpp  Disp.h  DisplayTextBox.cpp  DisplayTextBox.h  FormatText.cpp  FormatText.h  Formats.cpp  GUILocalString.cpp  GUILocalString.h  GameIcons.cpp  GameIcons.h  GameMusic.cpp  GameMusic.h  Global.cpp  Global.h  IDirectXDraw.Cpp  IDirectXDraw.h  IDirectXImage.Cpp  IDirectXImage.H  IDirectXPcx.Cpp  IDirectXPcx.H  IDirectXSprite.H  (+98 more)
client/T4C Client/Debug/: BuildLog.htm  T4C Client.exp  T4C Client.lib
client/T4C Client/Game01/: Cases.cpp  Cases.h  PathFinder.cpp  PathFinder.h  PerformUtil.cpp
client/T4C Client/NewInterface/: AnimUI.cpp  BoxUI.cpp  BoxUI.h  ButtonUI.cpp  ButtonUI.h  BuyUI.h  ControlUI.cpp  ControlUI.h  DropZoneUI.cpp  DropZoneUI.h  EditUI.cpp  EditUI.h  EmptyEvent.cpp  EventVisitor.cpp  EventVisitor.h  GameUI.cpp  GameUI.h  GraphUI.cpp  GridUI.cpp  GridUI.h  ListUI.cpp  ListUI.h  RootBoxUI.cpp  RootBoxUI.h  ScrollUI.cpp  SliderUI.cpp  SliderUI.h  StaticTextUI.cpp  StaticTextUI.h  TextPageUI.cpp  TextPageUI.h  V3_AHDlg.cpp  V3_AHDlg.h  V3_AHVendreDlg.cpp  V3_AHVendreDlg.h  V3_Arene1PlayDlg.cpp  V3_Arene1PlayDlg.h  V3_Arene1WaitDlg.cpp  V3_Arene1WaitDlg.h  V3_ArenePointsDlg.cpp  (+89 more)
client/T4C Client/Release/: BuildLog.htm  T4C Client.exp  T4C Client.lib
client/T4C Client/SmoothTile/: !!SmoothTile.cpp  !!SmoothTile.h  !LayeredTile.cpp  !SmoothTile.cpp  !SmoothTile.h  !SmoothTileLoader.cpp  !SmoothTileLoader.h  LayeredTile.cpp  LayeredTile.h  SmoothTile.cpp  SmoothTile.h  SmoothTileLoader.cpp  SmoothTileLoader.h
client/T4C Client/UDP/: NMPacketManager.cpp  NMPacketManager.h  Socket.cpp  Socket.h  UDPClient.cpp  UDPClient.h
client/T4C Client/Zlib/: zlibstatd.lib
client/T4CConfig/: EnglishGUI.elng  FrenchGUI.elng  GUILocalString.cpp  INITools.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  T4CConfig.aps  T4CConfig.cpp  T4CConfig.h  T4CConfig.rc  T4CConfig.vcproj  T4CConfig.vcxproj  T4CConfig.vcxproj.filters  T4CConfigDlg.cpp  T4CConfigDlg.h  encrandom.h  english.elng  french.elng  resource.h
client/T4CConfig/Controls/: ColoredListCtrl.cpp
client/T4CConfig/Debug/: BuildLog.htm  T4CConfig.exp  T4CConfig.lib
client/T4CConfig/Release/: BuildLog.htm  T4CConfig.exp  T4CConfig.lib
client/T4CConfig/Zlib/: zlibstat.lib
client/T4CConfig/res/: T4CConfig.rc2
docs/: ARCHITECTURE.md  RUNTIME_ASSETS.md  SPRINT_FINAL.md
runtime/: SOURCE.txt
scripts/: build_client.sh  build_server.sh  copy_runtime_assets.sh  copy_sons_wav.sh  gen_creature_appearance_table.py  gen_ground_object_sprite_table.py  gen_inv_item_sprite_table.py  gen_puppet_tables.py  gen_wda_dat_stubs.py  run_client.sh  run_combat_e2e.sh  run_e2e_test.sh  run_reconnect_sim.sh  run_regression_tests.sh  run_server.sh  setup_from_clone.sh
src/: main.cpp
src/audio/: T4CGameMusic.cpp  T4CGameMusic.h  T4CGameMusicZone.cpp  T4CGameMusicZone.h
src/game/: GameWorldScreen.cpp  GameWorldScreen.h  T4CCharacterWindow.cpp  T4CCharacterWindow.h  T4CGameHud.cpp  T4CGameHud.h  T4CGroundObjectSpriteTable.inc  T4CGroundObjectSprites.cpp  T4CGroundObjectSprites.h  T4CInvItemSpriteTable.inc  T4CInvItemSprites.cpp  T4CInvItemSprites.h  T4CMovementBaseline.cpp  T4CMovementBaseline.h  T4CPuppet.cpp  T4CPuppetBodyOrder.inc  T4CPuppetDraw.h  T4CPuppetResolve.inc  T4CPuppetTypes.h  T4CPuppetize.inc  T4CUnitSpriteNames.cpp  T4CUnitSpriteNames.h
src/gui/: CharacterCreateScreen.cpp  CharacterCreateScreen.h  CharacterSelectScreen.cpp  CharacterSelectScreen.h  IntroductionScreen.cpp  IntroductionScreen.h  LauncherChrome.cpp  LauncherChrome.h  LoginClientConfig.cpp  LoginClientConfig.h  LoginScreen.cpp  LoginScreen.h  T4CCharacterQuestionnaire.cpp  T4CCharacterQuestionnaire.h  T4CScrollingBanner.cpp  T4CScrollingBanner.h  T4CUiFont.cpp  T4CUiFont.h
src/network/: T4CClientStubs.cpp  T4CClientStubs.h  T4CCommBridge.cpp  T4CCommBridge.h  T4CCreatureAppearanceTable.inc  T4CLoginSession.cpp  T4CLoginSession.h  T4CNetworkDebugLog.cpp  T4CNetworkDebugLog.h  T4CNpcDialog.h  T4CPlayerInventory.h
src/runtime/: T4CRuntimePaths.cpp  T4CRuntimePaths.h
src/tests/: T4CTestHarness.h  t4c_regression_tests.cpp
src/tools/: e2e_auth_probe.cpp
(+21 files in other folders)
